2015-06-11  Per Bothner  <per@bothner.com>

	* inlining-test.scm: Tests for setting of uniform vectors.
	* inlining.expected: Update accordingly.
	* Makefile.am: Update accordingly.

	* inlining-test.scm (index-seq, index-str2): New functions.
	* inlining.expected: Update accordingly.

2015-06-10  Per Bothner  <per@bothner.com>

	* inlining-test.scm (index-str1): New test for string indexing.
	* inlining.expected: Update accordingly.
	* text-test.scm: Test indexing string with non-basic-plan characters.

2015-06-08  Per Bothner  <per@bothner.com>

	* inlining-test.scm: Tests for uniform vectors, especially indexing.
	* inlining.expected: Update accordingly.
	* Makefile.am: Update accordingly.
	* num-test.scm: Test indexing of u8vector, with "negative" value.

	* Makefile.am (check-interpreted-cycle): Tweak command line to
	avoid warning.
	* sva31180.scm (bar): Update formal argument list to avoid warning.

2015-06-04  Per Bothner  <per@bothner.com>

	* num-test.scm: Add some tests for shifts.

	* testsuite/inlining-test.scm: Add various shifts.
	* testsuite/Makefile.am: Update accordingly.
	* testsuite/inlining.expected: Update accordingly.

2015-06-03  Per Bothner  <per@bothner.com>

	* quaternion-test.scm: Changes tests of quaternion->rotation-matrix
	to be independent of whether Double or DFloNum is used.

	* num-test.scm: Add test.
	* inlining-test.scm (increment-s8a, increment-arr-s8)
	incrementU8a setU16a addU8aU16a): New functions.
	* Makefile.am: Update accordingly.
	* inlining.expected: Update accordingly.

2015-06-02  Per Bothner  <per@bothner.com>

	* num-test.scm: Add some tests for primitive unsigned comparison.
	* inlining-test.scm: Likewise.
	* Makefile.am: Update accordingly.
	* inlining.expected: Update accordingly.

2015-05-20  Per Bothner  <per@bothner.com>

	* obj-test.scm: Fix deprecated return-type specifier syntax.
	* mac-test.scm: Likewise.

2015-05-20  William D Clinger <will@ccs.neu.edu>
